Resolves: tdf#125369 recover newline support of tdf#101779

Change-Id: Ia46fc89f056c714e9a06c48e980277025fb16a61